# bse

./: .gitignore  README.md
rust/: Cargo.toml
rust/bse/: Cargo.toml
rust/bse/src/: general.rs  lib.rs  public_health.rs  uniclass.rs
rust/bse/src/general/: building_type.rs
rust/bse/src/public_health/: ciphe_daily_water_demand.rs
rust/extras/: .gitignore
rust/initiate/: Cargo.toml
www/: package.json  tailwind.config.js  vite.config.js  vitest.config.js
www/src/: calculators.html  index.html  init.js  project.html  uniclass.html
www/src/extras/: .gitignore
www/src/lib/uniclass/: uniclass.js
www/src/pages/calculators/: App.vue
www/src/pages/calculators/CIPHE001-DailyWaterDemand/: calculator.js  ciphe001dailywaterdemand.vue  ciphe001dailywaterdemandcard.vue  ciphe001dailywaterdemandguides.vue  uniclass.js
www/src/pages/calculators/CIPHE002-HotWaterDemandDaily/: calculator.js  ciphe002dailyhotwaterdemand.vue  ciphe002dailyhotwaterdemandcard.vue  uniclass.js
www/src/pages/calculators/CIPHE003-HotWaterDemandStored/: calculator.js  ciphe003storedhotwaterdemand.vue  ciphe003storedhotwaterdemandcard.vue  uniclass.js
www/src/pages/calculators/components/: calculatorcomponent.vue
www/src/pages/index/: App.vue  main.js
www/src/pages/project/: App.vue
www/src/pages/uniclass/: App.vue
www/src/pages/uniclass/components/: treenode.vue
www/src/pages/uniclass/js/: mapping.js
