[package]
name = "bse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
derive-sql = { path = "../extras/derive-sql" }
regex = "1"
nanoid = "0.4"

###
rusqlite   = { version = "0.29", features = [ "bundled" ] }
serde      = { version = "1", features = [ "derive" ] }
serde_json = { version = "1" }

[features]
cli = [ ]

